force-app/main/default/objects/tc9_pr__Template_Group__c/tc9_pr__Template_Group__c.object-meta.xml
<CustomObject>
    <description>Maintains groups the various template records to enable easier allocation to Clients and Assignment.</description>
    <label>Template Group</label>
    <nameField>
        <label>Template Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>