force-app/main/default/objects/tc9_pr__Template_Group__c/fields/tc9_core__Interpretation_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Interpretation_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the Template Group to an Interpretation Rule. 
Used in Agreements only.</description>
    <inlineHelpText>Relates the Template Group to an Interpretation Rule. 
Used in Agreements only.</inlineHelpText>
    <label>Interpretation Rule</label>
    <referenceTo>tc9_et__Interpretation_Rule__c</referenceTo>
    <relationshipLabel>Template Groups</relationshipLabel>
    <relationshipName>Template_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>