force-app/main/default/objects/tc9_pr__Template_Group__c/fields/tc9_et__Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Assignment that owns this Template Group.</description>
    <inlineHelpText>The Assignment that owns this Template Group.</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipLabel>Template Groups</relationshipLabel>
    <relationshipName>Template_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>