force-app/main/default/objects/tc9_pr__Template_Group__c/fields/tc9_et__Location__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Location associated with this Template Group.</description>
    <inlineHelpText>The Location associated with this Template Group.</inlineHelpText>
    <label>Location</label>
    <referenceTo>tc9_pr__Location__c</referenceTo>
    <relationshipLabel>Template Groups</relationshipLabel>
    <relationshipName>Template_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>