force-app/main/default/objects/tc9_pr__Template_Group__c/fields/tc9_et__Rate_Template_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Rate_Template_Type__c</fullName>
    <description>Specifies what the rates in this template group are used for, including whether they are award-based, carded (shared across multiple clients), or specific to a client, job, or assignment.</description>
    <inlineHelpText>Specifies what the rates in this template group are used for, including whether they are award-based, carded (shared across multiple clients), or specific to a client, job, or assignment.</inlineHelpText>
    <label>Rate Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Award Rates</fullName>
            </value>
            <value>
                <fullName>Client Rates</fullName>
            </value>
            <value>
                <fullName>Job Rates</fullName>
            </value>
            <value>
                <fullName>Assignment Rates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>