force-app/main/default/objects/tc9_pr__Template_Group__c/fields/tc9_pr__Client__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Client that the Template Group applies</description>
    <inlineHelpText>Defines the Client that the Template Group applies</inlineHelpText>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Template Groups</relationshipLabel>
    <relationshipName>Template_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>