force-app/main/default/objects/tc9_pr__Template_Group__c/recordTypes/tc9_core__Pay_Rate_Loading.recordType-meta.xml
<RecordType>
    <fullName>tc9_core__Pay_Rate_Loading</fullName>
    <active>true</active>
    <description>To be used for creating Template Groups for Pay Rate Loadings.</description>
    <label>Pay Rate Loading</label>
</RecordType>