force-app/main/default/objects/tc9_pr__Template_Group__c/recordTypes/tc9_et__Interpretation_Rules.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Interpretation_Rules</fullName>
    <active>true</active>
    <description>To be used for creating Template Groups for Interpretation Rules</description>
    <label>Interpretation Rules</label>
</RecordType>