force-app/main/default/objects/tc9_pr__Template_Group__c/recordTypes/tc9_et__Invoice_Settings.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Invoice_Settings</fullName>
    <active>true</active>
    <description>To be used for creating Template Groups for Invoice Settings</description>
    <label>Invoice Settings</label>
</RecordType>