force-app/main/default/objects/tc9_pr__Template_Group__c/recordTypes/tc9_et__Payee_Timesheet_Allowance.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Payee_Timesheet_Allowance</fullName>
    <active>true</active>
    <description>To be used for creating Template Groups for Payee Timesheet Allowances</description>
    <label>Payee Timesheet Allowance</label>
</RecordType>