force-app/main/default/objects/tc9_pr__Template_Group__c/recordTypes/tc9_et__Rate_Calculator_Template.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Rate_Calculator_Template</fullName>
    <active>true</active>
    <description>To be used for creating Template Groups for Rate Calculator</description>
    <label>Rate Calculator Template</label>
</RecordType>