force-app/main/default/objects/tc9_pr__Template_Group__c/recordTypes/tc9_pr__Assignment_Rates.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Assignment_Rates</fullName>
    <active>true</active>
    <description>To be used for creating Template Groups for Assignment Rates</description>
    <label>Assignment Rates</label>
</RecordType>