force-app/main/default/objects/tc9_pr__Template_Group__c/recordTypes/tc9_pr__Employment_Cost.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Employment_Cost</fullName>
    <active>true</active>
    <label>Employment Cost</label>
</RecordType>